--- a/src/apps/user/templates/user/user-inventory.html
+++ b/src/apps/user/templates/user/user-inventory.html
@@ -29,7 +29,7 @@
             </div>
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link" onclick="window.location.href='{% url 'homepage' %}'">
+                    <a href="#" class="sidebar-link" onclick="window.location.href='homepage';">
                         <i class="lni lni-home"></i>
                         <span>Home</span>
                     </a>
